# la-pleiade

./: .gitignore  README.md
atlas/TheRock/base/amdsmi/: CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md
atlas/TheRock/base/amdsmi/.azuredevops/: rocm-ci.yml
atlas/TheRock/base/amdsmi/.github/: CODEOWNERS  CONTRIBUTING.md
atlas/TheRock/base/amdsmi/DEBIAN/: copyright.in  postinst.in
atlas/TheRock/base/amdsmi/RPM/: post.in
atlas/TheRock/base/amdsmi/amdsmi_cli/: CMakeLists.txt  amdsmi_cli.py  amdsmi_commands.py  amdsmi_helpers.py  amdsmi_init.py  amdsmi_logger.py  amdsmi_parser.py
atlas/TheRock/base/amdsmi/cmake_modules/: help_package.cmake  utils.cmake
atlas/TheRock/base/amdsmi/docs/: conf.py  index.md
atlas/TheRock/base/amdsmi/example/: CMakeLists.txt  amd_smi_drm_example.cc
atlas/TheRock/base/amdsmi/py-interface/: __init__.py  amdsmi_interface.py  amdsmi_wrapper.py
atlas/TheRock/base/amdsmi/rocm_smi/: CMakeLists.txt
atlas/TheRock/base/amdsmi/src/: CMakeLists.txt
atlas/TheRock/base/amdsmi/src/aca-decode/: aca_api.c  aca_decode.c  aca_fields.c  aca_tables.c  aca_version.c  error_map.c  main.c
atlas/TheRock/base/amdsmi/src/amd_smi/: amd_smi.cc  amd_smi_common.cc  amd_smi_cper.cc  amd_smi_drm.cc  amd_smi_gpu_device.cc  amd_smi_socket.cc  amd_smi_system.cc  amd_smi_utils.cc  fdinfo.cc
atlas/TheRock/base/amdsmi/tools/: amdsmi_quick_start.py  cmake_format.sh  generator.py  run-clang-tidy.sh  update_wrapper.sh
atlas/TheRock/base/half/: CMakeLists.txt
atlas/TheRock/base/half/.azuredevops/: rocm-ci.yml
atlas/TheRock/base/half/.github/: dependabot.yml
atlas/TheRock/base/half/docs/: .gitignore  conf.py  index.rst
atlas/TheRock/base/rocm-cmake/docs/: requirements.in  requirements.txt
atlas/TheRock/comm-libs/rccl/: CHANGELOG.md  CMakeLists.txt  install.sh
atlas/TheRock/comm-libs/rccl-tests/: README.md  install.sh
atlas/TheRock/comm-libs/rccl-tests/src/: all_reduce.cu  alltoallv.cu  common.cu  common.h  hypercube.cu  reduce.cu  reduce_scatter.cu
atlas/TheRock/comm-libs/rccl-tests/verifiable/: verifiable.cu  verifiable.h
atlas/TheRock/comm-libs/rccl/.github/: CODEOWNERS
atlas/TheRock/comm-libs/rccl/cmake/: Dependencies.cmake
atlas/TheRock/comm-libs/rccl/src/: collectives.cc  enqueue.cc  group.cc  init.cc  proxy.cc  rccl_wrap.cc  symmetric.cc
atlas/TheRock/comm-libs/rccl/test/: AllGatherTests.cpp  AllReduceTests.cpp  AllToAllTests.cpp  StandaloneTests.cpp
atlas/TheRock/profiler/rocprof-trace-decoder/binaries/: CHANGELOG.md  LICENSE  README.md
atlas/TheRock/rocm-systems/: .git-blame-ignore-revs
atlas/TheRock/rocm-systems/.azuredevops/: rocm_ci_caller.yml  rocprofiler-sdk.yml
atlas/TheRock/rocm-systems/.github/: CODEOWNERS
atlas/TheRock/rocm-systems/.github/scripts/: therock_configure_ci.py  therock_matrix.py
atlas/TheRock/rocm-systems/.github/workflows/: azure-ci-dispatcher.yml  rocprofiler-compute-cdash.yml  rocprofiler-compute-rhel-8.yml  rocprofiler-compute-tarball.yml  rocprofiler-sdk-build-ci-docker-images.yml  rocprofiler-sdk-code_coverage.yml  rocprofiler-sdk-codeql.yml  rocprofiler-sdk-continuous_integration.yml  rocprofiler-sdk-docs.yml  rocprofiler-sdk-restrictions.yml  rocprofiler-sdk-rocm_release_compatibility.yml  rocprofiler-systems-containers.yml  rocprofiler-systems-continuous-integration.yml  rocprofiler-systems-debian.yml  rocprofiler-systems-formatting.yml  rocprofiler-systems-ghcr.yml  rocprofiler-systems-opensuse.yml  (+7 more)
atlas/TheRock/rocm-systems/projects/rocprofiler-sdk/tests/rocprofv3/hip-streams-per-thread/: CMakeLists.txt
atlas/doc/: llama_embedding.md
electra/: CMakeLists.txt
electra/VM_catalog/: template_test.xml  test.xml  test2.xml
electra/autoinstall/: meta-data  user-data
electra/doc/: cmake_helper.md  cmake_project_organisation.txt
electra/include/electra/: test_unit.h
electra/srcs/: CMakeLists.txt  main.c
electra/srcs/offer_managment/: offer.c  offer.h  scheduler.c  scheduler.h
electra/srcs/offer_managment/offers/: 1_ia_start.xml  2_ia_dev.xml  3_ia_pro.xml  4_ia_lab.xml  5_ia_max.xml
electra/srcs/vm_managment/: create_vm.sh  test.sh  vm.h  vm_domain.c  vm_host.c  vm_xml.c
electra/test_unit/: CMakeLists.txt  test_date.c  test_date2.c
merope/: requirements.txt
merope/42/Minishell/: .gitignore  Makefile  README.md  clear
merope/42/Minishell/doc/: ast.excalidraw  cmd-linked-ast.excalidraw  fork_wait.excalidraw  grammar.md  linked_list.excalidraw  optimised_tokenisation.excalidraw  pipe_initial statev2(1).excalidraw  pipe_initial statev2.excalidraw  pipe_last_state.excalidraw  pipe_part1.excalidraw  redirection_flow.excalidraw
merope/42/Minishell/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_generate_number.c  ft_index_of_int.c  ft_isquote.c  ft_lstadd_back_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_memcmp.c  ft_memcpy.c  ft_memset.c  ft_print_bit_16.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_qsort.c  ft_radix_sort.c  ft_skip_space.c  ft_split.c  ft_split_len.c  ft_split_quick_sort.c  ft_strchr.c  ft_strdup.c  ft_strlen.c  ft_strtrim.c  ft_swap_ptr.c  ft_swap_str.c
merope/42/Minishell/srcs/: main.c  main.h
merope/42/Minishell/test/: main_test.c  main_test.h
merope/42/cpp0_42/: CMakeLists.txt
merope/42/cpp0_42/cpp-00/: ex00.cpp
merope/42/cpp0_42/cpp-01/: create.cpp  phone.cpp  phone.hpp  search.cpp  test
merope/42/libft/: Makefile  ft_bublesort.c  ft_cmp_char.c  ft_cmp_int.c  ft_day_in_mount.c  ft_get_max_value.c  ft_index_of_char.c  ft_is_sort.c  ft_isalpha.c  ft_isset.c  ft_itoa.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstnew_bonus.c  ft_memchr.c  ft_memmove.c  ft_nbr_of_word.c  ft_print_bit_32.c  ft_print_bit_64.c  ft_print_bit_8.c  ft_radix_sort_gen.c  ft_split_clean.c  ft_split_is_sort.c  ft_split_print.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen_longest.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_substr.c  libft.h  test
merope/notebook/doc/: commande.txt
merope/scripts/: activate_rocm.sh
procedures/: cmake_workflow.md  therock.md  vscode_config.md
(+536 files in other folders)
